objects/Dropbox__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accountäüö</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dropbox</relationshipLabel>
        <relationshipName>Dropbox1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case m</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Dropbox</relationshipLabel>
        <relationshipName>Dropbox</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dropbox</relationshipLabel>
        <relationshipName>Dropbox</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <formula>HYPERLINK(&quot;javascript: window.open(&apos;/apex/DropboxDownload?theURL=&quot; +URL__c+&quot;&apos; , &apos;Revisions&apos;, &apos;width=800,height=600,resizable=yes&apos;);javascript:self.close();&quot; , &apos;Download&apos;, &apos;_blank&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropboxDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DropboxDocument</label>
        <referenceTo>Dropbox__c</referenceTo>
        <relationshipLabel>Dropbox</relationshipLabel>
        <relationshipName>Dropbox</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Folder_Label__c</fullName>
        <label>Folder Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Dropbox</relationshipLabel>
        <relationshipName>Dropbox</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <formula>LEFT(SUBSTITUTE(URL__c, LEFT(URL__c , FIND( &quot;/&quot; +  $Setup.DropboxConfig__c.CurrentFolderNumber__c +&quot;/&quot; , URL__c, 40)+2), &quot;&quot;),18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <formula>SUBSTITUTE(URL__c , &quot;https://www.dropbox.com/0/links/Apps/salesforce&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <formula>/*HYPERLINK(&quot;/apex/DropboxRevision?FileId=&quot; +Id, &apos;Display Revisions&apos;, &apos;_blank&apos; )*/
HYPERLINK(&quot;javascript: window.open(&apos;/apex/DropboxRevision?FileId=&quot;+Id +&quot;&apos; , &apos;Revisions&apos;, &apos;width=800,height=600,resizable=yes&apos;);&quot;, &apos;Display Revisions&apos;, &apos;_blank&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareable_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/DropboxShareableLink?theURL=&quot; +URL__c , &apos;Get Link&apos;, &apos;_blank&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shareable Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserPrivateFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserPrivateFolder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dropbox</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>new_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>new Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qwd__c</fullName>
        <label>qwd</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1%3A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dropbox</label>
    <listViews>
        <fullName>All</fullName>
        <columns>URL__c</columns>
        <columns>Name__c</columns>
        <columns>Download__c</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Folder__c</columns>
        <columns>ParentId__c</columns>
        <columns>DropboxDocument__c</columns>
        <columns>Path__c</columns>
        <columns>UserPrivateFolder__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dropbox-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dropbox</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>test__c</fullName>
        <label>test</label>
    </sharingReasons>
    <validationRules>
        <fullName>Rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>error</errorMessage>
    </validationRules>
</CustomObject>